# log-sentinel-agent

./: .env.example  .gitignore  .logsentinelignore  Dockerfile  README.md  action.yml  logsentinel.example.yml  pyproject.toml
.github/workflows/: ci.yml  logsentinel-example.yml
docs/: architecture.md  configuration.md  evaluation.md  github-action.md  rule-authoring.md  security.md
docs/rules/: ERR-003.md  LOG-003.md
evaluation/: labels.json  metrics.md  run_evaluation.py
evaluation/corpus/java/false_positive/: CleanController.java
evaluation/corpus/java/true_positive/: AuthController.java
evaluation/corpus/python/false_positive/: clean_app.py
evaluation/corpus/python/true_positive/: app.py
sample_repos/java_app/: AuthController.java
sample_repos/python_app/: app.py
src/: agent.py  cli.py  config.py  deterministic.py  discovery.py  domain.py  language.py  preprocessor.py  reporting.py  rule_catalog.py  snippets.py  treesitter.py  web.py
src/core/: __init__.py  postprocessor.py
src/logsentinel/: __init__.py  agent.py  cli.py  config.py  deterministic.py  discovery.py  domain.py  observability.py  preprocessor.py  reporting.py  rule_catalog.py  semantic.py  snippets.py  treesitter.py  web.py
src/logsentinel/parsing/: __init__.py  fallback.py  models.py  treesitter_service.py
src/logsentinel/rules/: __init__.py  base.py  catalog_loader.py  common.py  owasp_logging_exception.json  registry.py
src/logsentinel/rules/java/: console_logging.py  sensitive_logging.py  swallowed_exception.py  unsafe_error_response.py
src/logsentinel/rules/python/: sensitive_logging.py  (+2 more)
src/logsentinel/semantic/: __init__.py  analyzer.py  redactor.py  snippet_builder.py
src/logsentinel/static/: styles.css
src/parsing/: __init__.py  fallback.py  models.py  treesitter_service.py
src/reporting/: __init__.py  html.py  json_report.py  markdown.py  sarif.py  writer.py
src/rules/: base.py  catalog_loader.py  common.py  registry.py
src/rules/java/: __init__.py  console_logging.py  sensitive_logging.py  swallowed_exception.py  unsafe_error_response.py
src/rules/python/: __init__.py  sensitive_logging.py  swallowed_exception.py  unsafe_error_response.py
src/semantic/: __init__.py  analyzer.py  prompt_builder.py  response_parser.py  snippet_builder.py  validator.py
src/templates/: index.html
tests/: test_cli.py  test_config.py  test_deterministic.py  test_integration_scan.py  test_language.py  test_parsing_context.py  test_postprocessor.py  test_preprocessor.py  test_redaction.py  test_reporting.py  test_rule_engine.py  test_semantic_analyzer.py  test_semantic_validator.py  test_treesitter.py  test_web.py
