[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "logsentinel"
version = "0.1.0"
description = "OWASP-backed logging and exception handling scanner using Tree-sitter, LangGraph, and Gemini."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LogSentinel Contributors" }]
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "langgraph>=1.2.0",
  "google-genai>=2.10.0",
  "tree-sitter-language-pack>=1.12.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.6.0",
]

[project.scripts]
logsentinel-web = "logsentinel.web:main"
logsentinel-scan = "logsentinel.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/logsentinel"]

[tool.hatch.build.targets.wheel.force-include]
"src/logsentinel/rules/owasp_logging_exception.json" = "logsentinel/rules/owasp_logging_exception.json"
"src/logsentinel/templates/index.html" = "logsentinel/templates/index.html"
"src/logsentinel/static/styles.css" = "logsentinel/static/styles.css"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
