[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "logsentinel"
version = "0.1.0"
description = "Agentic logging and exception-handling analyzer for Python and Java repositories."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LogSentinel Contributors" }]
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "PyYAML>=6.0.0",
  "langgraph>=1.2.0",
  "google-genai>=2.10.0",
  "tree-sitter-language-pack>=1.12.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
logsentinel-web = "web:main"
logsentinel-scan = "cli:main"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src/rules/owasp_logging_exception.json" = "rules/owasp_logging_exception.json"
"src/templates/index.html" = "templates/index.html"
"src/static/styles.css" = "static/styles.css"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
